GP-5128: Dynamically generate file filter extensions for Loaders and GFileSystems